Fix site name overflow issue with ellipsis

--- a/static/edem-navigation/scss/components/_edem-topbar.scss
+++ b/static/edem-navigation/scss/components/_edem-topbar.scss
@@ -25,6 +25,7 @@
       display: inline-flex;
       align-items: center;
       height: 100%;
+      min-width: 0;
       transition: transform 0.3s 0s $swift-out, opacity 0.2s 0.1s linear;
 
       > .logo {
